# Voxels

./: CMakeLists.txt  main.cpp
assets/shaders/: basic.frag  basic.vert  voxelMarcher.frag  voxelMarcher.vert
include/: Application.hpp  CameraDescriptor.hpp  Exception.hpp  File.hpp  Global.hpp  Mesh.hpp  Observer.hpp  OctTree.hpp  OctTreeHelpers.hpp  OctTreeNode.hpp  Vertex.hpp
include/Events/: Event.hpp
include/Renderer/: AttributeDescriptor.hpp  CompilationException.hpp  IBindable.hpp  IRenderer.hpp  ISurface.hpp  IWindowVisitor.hpp  LinkingException.hpp  ShaderType.hpp  TextureFilter.hpp  TextureFormat.hpp  TextureWrap.hpp
include/Renderer/OpenGl/: Buffer.hpp  Common.hpp  Pipeline.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBufferAttributes.hpp  WindowVisitor.hpp  X11Surface.hpp
include/Renderer/Vulkan/: Renderer.hpp  VulkanException.hpp
include/Scripts/: CameraController.hpp  IScript.hpp
include/Utilities/: MeshLoading.hpp
include/Window/: EventParser.hpp  IEventTranslator.hpp  IWindow.hpp  InputEventParser.hpp  WindowBuilder.hpp  WindowManager.hpp
include/Window/Event/: CloseRequestedEvent.hpp  IEvent.hpp  Key.hpp  KeyboardEvent.hpp  MouseButtonEvent.hpp  MouseMotionEvent.hpp  ResizeEvent.hpp  ScrollEvent.hpp
include/Window/Linux/X11/: EventTranslator.hpp  Window.hpp
include/World/: Camera.hpp  Chunk.hpp  Entity.hpp  World.hpp
src/: Application.cpp  File.cpp
src/Renderer/OpenGl/: Pipeline.cpp  Renderer.cpp  Shader.cpp  WindowVisitor.cpp
src/Renderer/Vulkan/: Renderer.cpp
src/Window/: WindowBuilder.cpp  WindowManager.cpp
src/Window/Linux/X11/: EventTranslator.cpp  Window.cpp
